# dawn

./: CMakeLists.txt  README.md  gen_dawnfunction.py  gen_secret.py  resources.qrc
doc/: bom.txt
firmware/: CMakeLists.txt  clock.c  clock.h  communication.c  communication.h  ds1307.c  ds1307.h  gpio.c  gpio.h  i2c.c  i2c.h  main.c  pwm.c  pwm.h  siphash24.c  siphash24.h  siphash_2_4_asm.S  siphash_2_4_asm.h  temp.c  temp.h  uart.c  uart.h
hardware/: dawn.brd  dawn.sch  isp.lbr  jy-mcu.lbr  lampe.brd  lampe.sch
hardware/firmware/: firmware.ino  siphash24.cpp  siphash24.h  siphash_2_4_asm.h
i18n/: dawn_de_DE.ts
shared/: Info.plist  icons.icns
src/: CMakeLists.txt  alarmsettingwidget.cc  alarmsettingwidget.hh  configdialog.cc  configdialog.hh  dawn.cc  dawn.hh  dawncmd.cc  dawnd.cc  dawnd.hh  dawndiscover.cc  dawndiscover.hh  dayofweekdelegate.cc  dayofweekdelegate.hh  dayofweekwidget.cc  dayofweekwidget.hh  devicesettings.cc  devicesettings.hh  logger.cc  logger.hh  logmessagetable.cc  logmessagetable.hh  main.cc  mainwindow.cc  mainwindow.hh  option_parser.cc  option_parser.hh  portdialog.cc  portdialog.hh  siphash24.c  siphash24.h  timedelegate.cc  timedelegate.hh
src/qfcgi/: fdbuilder.cpp  request.h
